--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="timeline-content">
                 <p class="timeline-content-month">June 2020 - Present</p>
                 <p class="timeline-content-date">Junior Engineer</p>
+                <i>Sarasota, Florida.</i>
                 <p>Atlas Networks.</p>
-                <p>Sarasota, Florida.</p>
             </div>
         </div>
 
