--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             </p>
         </div>
     </div>
-
+    <!-- <hr class="center" style="border-color:#fff;width:30em;"> -->
+    <div class="space3"></div>
+    <h2 class="center" style="color:#fff;">Experience</h2>
     <div class="timeline" style="width:75%;">
-
         <div class="timeline-item">
             <div class="timeline-icon">
                 <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill-rule="evenodd" clip-rule="evenodd">
