enhanced responsiveness depending on screen size

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="space2"></div>
     <div class="flex-container">
         <img src="assets/headshot.png" alt="Haylee Millar Photo" class="center"
-            style="height:20em;margin:1em;border-radius:0.25em;">
-        <div class="flex-container white-card" style="height:20em;width:30em;flex-direction:column;">
+            style="height:20em;margin:1em;border-radius:0.25em;flex-direction:column;flex-wrap:wrap;">
+        <div class="flex-container white-card">
             <h1 class="center">Haylee Millar</h1>
             <p>
                 Hi & welcome-- I am a rising 4th year honors computer science student at New College of Florida.
