addition of hcc project progress

--- a/index.html
+++ b/index.html
@@ -5,36 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-        rel="stylesheet">
+    <title>Haylee Millar</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <!-- Compressed CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
-        integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 
     <!-- Compressed JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js"
-        integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.3/js/foundation.min.js"
-        integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.3/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <body>
     <div class="space2"></div>
     <div class="flex-container">
-        <img src="assets/headshot.png" alt="Haylee Millar Photo" class="center"
-            style="height:20em;margin:1em;border-radius:0.25em;flex-direction:column;flex-wrap:wrap;">
+        <img src="assets/headshot.png" alt="Haylee Millar Photo" class="center" style="height:20em;margin:1em;border-radius:0.25em;flex-direction:column;flex-wrap:wrap;">
         <div class="flex-container white-card">
             <h1 class="center">Haylee Millar</h1>
             <p>
-                Hi & welcome-- I am a rising 4th year honors computer science student at New College of Florida.
-                Tentatively graduating May 2021, I am looking forward to applying to software engineering & solutions
-                architect jobs in the
-                sector of cloud computing.
-                I am fascinated by many things including connecting different systems that work independently of one
-                another to create useful solutions.
+                Hi & welcome-- I am a 4th year honors computer science student at New College of Florida. Tentatively graduating May 2021, I am looking forward to applying to software engineering & solutions architect jobs in the sector of cloud computing. I am fascinated
+                by many things including connecting different systems that work independently of one another to create useful solutions.
             </p>
         </div>
     </div>
@@ -49,12 +42,13 @@
             <div class="timeline-content">
                 <p class="timeline-content-month">June 2020 - Present</p>
                 <p class="timeline-content-date">Solutions Architect
-                <div class="timeline-content-date link" onclick="window.open('https://www.atlasnetworks.com/');">Atlas
-                    Networks</div>.</p>
+                    <div class="timeline-content-date link" onclick="window.open('https://www.atlasnetworks.com/');">Atlas Networks
+                    </div>.</p>
                 </p>
                 <i>Sarasota, Florida.</i>
                 <p>
-                    I am currently working to create new solutions and maintain current projects for Atlas Networks clients using <div class="link" onclick="window.open('https://aws.amazon.com/');">Amazon Web Services</div> tools.
+                    I am currently working to create new solutions and maintain current projects for Atlas Networks clients using
+                    <div class="link" onclick="window.open('https://aws.amazon.com/');">Amazon Web Services</div> tools.
                 </p>
             </div>
         </div>
@@ -66,16 +60,13 @@
             <div class="timeline-content right">
                 <p class="timeline-content-month">May 2019 - May 2020</p>
                 <p class="timeline-content-date">Backend Software Engineer Intern
-                <div class="timeline-content-date link" onclick="window.open('https://www.atlasnetworks.com/');">Atlas
-                    Networks</div>
+                    <div class="timeline-content-date link" onclick="window.open('https://www.atlasnetworks.com/');">Atlas Networks
+                    </div>
                 </p>
                 <i>Sarasota, Florida</i>
                 <p>
-                    I developed a version 1 of Web Operations application that allows Atlas Networks clients &
-                    developers manage database backups.
-                    Clients are able to view the backups currently held in their AWS account in a S3 bucket.
-                    This application uniquely increases transparency with clients while also providing them a sense of
-                    control.
+                    I developed a version 1 of Web Operations application that allows Atlas Networks clients & developers manage database backups. Clients are able to view the backups currently held in their AWS account in a S3 bucket. This application uniquely increases
+                    transparency with clients while also providing them a sense of control.
                 </p>
             </div>
         </div>
@@ -103,12 +94,12 @@
             <div class="timeline-content right">
                 <p class="timeline-content-month">November 2019</p>
                 <p class="timeline-content-date">Co-Chairperson
-                <div class="timeline-content-date link" onclick="window.open('https://www.acm.org/');">Association for
-                    Computing Machinery
-                </div>
+                    <div class="timeline-content-date link" onclick="window.open('https://www.acm.org/');">Association for Computing Machinery
+                    </div>
                 </p>
                 <p>
-                    Elected Co-Chairperson for the NCF Association for Computing Machinery alongside <div class="link" onclick="window.open('https://courtney-e-miller.github.io/');">Courtney Miller</div>.
+                    Elected Co-Chairperson for the NCF Association for Computing Machinery alongside
+                    <div class="link" onclick="window.open('https://courtney-e-miller.github.io/');">Courtney Miller</div>.
                 </p>
             </div>
         </div>
@@ -120,9 +111,9 @@
             <div class="timeline-content">
                 <p class="timeline-content-month">October 2019</p>
                 <p class="timeline-content-date">GHC AnitaB Scholar
-                <div class="timeline-content-date link" onclick="window.open('https://anitab.org/');">
-                    AnitaB.org
-                </div>
+                    <div class="timeline-content-date link" onclick="window.open('https://anitab.org/');">
+                        AnitaB.org
+                    </div>
                 </p>
                 <i>Orlando, Florida</i>
                 <p>
@@ -140,8 +131,7 @@
                 <p class="timeline-content-date">Teaching Assistant
                     <div class="timeline-content-date link" onclick="window.open('https://www.ncf.edu/');">New College of Florida</div>
                 </p>
-                <p>I was a teaching assistant for the course <i>Introduction to Programming in Python</i> Fall 2018 and
-                    Fall 2020.</p>
+                <p>I was a teaching assistant for the course <i>Introduction to Programming in Python</i> Fall 2018 and Fall 2020.</p>
             </div>
         </div>
 
@@ -151,12 +141,11 @@
             </div>
             <div class="timeline-content">
                 <p class="timeline-content-month">May 2018 - August 2018</p>
-                <p class="timeline-content-date">Tech Intern 
-                    <div class="timeline-content-date link" onclick="window.open('https://www.revcontent.com/');">Revcontent</div></p>
+                <p class="timeline-content-date">Tech Intern
+                    <div class="timeline-content-date link" onclick="window.open('https://www.revcontent.com/');">Revcontent</div>
+                </p>
                 <i>Sarasota, Florida</i>
-                <p>I created meaningful data visualizations in Python and compiled my findings into a Django web
-                    application using Pandas and Bokeh libraries.
-                    I worked along side a Scrum development team to provide user engagement analytics for the software
+                <p>I created meaningful data visualizations in Python and compiled my findings into a Django web application using Pandas and Bokeh libraries. I worked along side a Scrum development team to provide user engagement analytics for the software
                     they were rolling out, Engage.IM.</p>
             </div>
         </div>
@@ -168,18 +157,17 @@
             <div class="timeline-content right">
                 <p class="timeline-content-month">November 2017</p>
                 <p class="timeline-content-date">Treasurer/Secretary</p>
-                <div class="timeline-content-date link" onclick="window.open('https://www.acm.org/');">Association for
-                    Computing Machinery
+                <div class="timeline-content-date link" onclick="window.open('https://www.acm.org/');">Association for Computing Machinery
                 </div>
-                <p>Co-found the NCF Association for Computing Machinery Chapter with peers <div class="link" onclick="window.open('https://courtney-e-miller.github.io/');">Courtney Miller</div> and Jennifer
-                    Greenberg, functioned as the secretary/treasurer.
+                <p>Co-found the NCF Association for Computing Machinery Chapter with peers
+                    <div class="link" onclick="window.open('https://courtney-e-miller.github.io/');">Courtney Miller</div> and Jennifer Greenberg, functioned as the secretary/treasurer.
                 </p>
             </div>
         </div>
 
         <div class="timeline-item">
             <div class="timeline-icon">
-                <img src="assets/imgs/book.svg" alt="college"></img> 
+                <img src="assets/imgs/book.svg" alt="college"></img>
             </div>
             <div class="timeline-content">
                 <p class="timeline-content-month">August 2017
@@ -228,8 +216,6 @@
     </ul>
 </body>
 
-<link rel="stylesheet" type="text/css" href="assets/style.css">
-
 <script type="text/javascript">
     $(document).foundation();
 
@@ -237,7 +223,9 @@
     mybutton = document.getElementById("btn-scroll");
 
     // When the user scrolls down 20px from the top of the document, show the button
-    window.onscroll = function () { scrollFunction() };
+    window.onscroll = function() {
+        scrollFunction()
+    };
 
     function scrollFunction() {
         if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
