connect two pages

--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
         <div class="flex-container white-card">
             <h1 class="center">Haylee Millar</h1>
             <p>
-                Hi & welcome-- I am a 4th year honors computer science student at New College of Florida. Tentatively graduating May 2021, I am looking forward to applying to software engineering & solutions architect jobs in the sector of cloud computing. I am fascinated
-                by many things including connecting different systems that work independently of one another to create useful solutions.
+                Hi & welcome-- I am a 4th year honors computer science student at New College of Florida tentatively graduating May 2021. I am fascinated by many things including connecting different systems that work independently of one another to create useful solutions.<br>In
+                my free time I enjoy sitting in my hammock, reading, and listening to music.
             </p>
         </div>
     </div>
+
+    <div class="text-center" style="margin-top:20px;">
+        <a href="hcc.html" class="mimic-button">Human Centered Computing Project</a>
+    </div>
+
     <!-- <hr class="center" style="border-color:#fff;width:30em;"> -->
     <div class="space3"></div>
     <h2 class="center" style="color:#fff;">Experience</h2>
