done through 1st iteration prototype

--- a/hcc.html
+++ b/hcc.html
@@ -197,6 +197,9 @@
                     management, creators have full control over their websites. The only requirement is for creators to ensure on their website a way to determine if users are authorized to view certain content. The platform will provide code snippets
                     and support, taking great care not to invade the creator’s space any further.
                 </p>
+                <p class="text-justify">
+                    Effort will also be taken to make sure the website is accessible according to the standards set forth and specified.
+                </p>
             </div>
 
 
@@ -221,6 +224,24 @@
             <div class="hcc-section">
                 <h1 style="margin-top:40px;">1st Design Iteration</h1>
                 <hr style="margin-left:0;">
+                <h2>Prototype</h2>
+                <div class="media-object text-center">
+                    <div class="media-object-section" style="margin:0 auto">
+                        <div class="thumbnail">
+                            <img src="assets/imgs/hcc/proto1-1.png" alt="prototype 1 page 1" style="width:40rem;"></img>
+                        </div>
+                        <div class="thumbnail">
+                            <img src="assets/imgs/hcc/proto1-2.png" alt="prototype 1 page 2" style="width:40rem;"></img>
+                        </div>
+                        <div class="thumbnail">
+                            <img src="assets/imgs/hcc/proto1-3.png" alt="prototype 1 page 3" style="width:40rem;"></img>
+                        </div>
+                        <div class="thumbnail">
+                            <img src="assets/imgs/hcc/proto1-4.png" alt="prototype 1 page 4" style="width:40rem;"></img>
+                        </div>
+                    </div>
+                </div>
+                <p class="text-justify" style="width:40rem;margin:0 auto;margin-bottom:20px;">Above are the 4 images used for the first iteration prototype for the user test. The images are annotated to describe the design decisions made.</p>
             </div>
 
 
