--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="assets/headshot.png" alt="Haylee Millar Photo" class="center" style="height:20em;margin:1em;border-radius:0.25em;flex-direction:column;flex-wrap:wrap;">
         <div class="flex-container white-card">
             <h1 class="center">Haylee Millar</h1>
-            <p>
+            <p class="text-justify">
                 Hi & welcome-- I am a 4th year honors computer science student at New College of Florida tentatively graduating May 2021. I am fascinated by many things including connecting different systems that work independently of one another to create useful solutions.<br>In
                 my free time I enjoy sitting in my hammock, reading, and listening to music.
             </p>
@@ -51,7 +51,7 @@
                     </div>.</p>
                 </p>
                 <i>Sarasota, Florida.</i>
-                <p>
+                <p class="text-justify">
                     I am currently working to create new solutions and maintain current projects for Atlas Networks clients using
                     <div class="link" onclick="window.open('https://aws.amazon.com/');">Amazon Web Services</div> tools.
                 </p>
@@ -69,7 +69,7 @@
                     </div>
                 </p>
                 <i>Sarasota, Florida</i>
-                <p>
+                <p class="text-justify">
                     I developed a version 1 of Web Operations application that allows Atlas Networks clients & developers manage database backups. Clients are able to view the backups currently held in their AWS account in a S3 bucket. This application uniquely increases
                     transparency with clients while also providing them a sense of control.
                 </p>
@@ -85,7 +85,7 @@
                 <p class="timeline-content-date">Teaching Assistant
                     <div class="timeline-content-date link" onclick="window.open('https://www.ncf.edu/');">New College of Florida</div>
                 </p>
-                <p>
+                <p class="text-justify">
                     I was a teaching assistant to two courses: <i>Software Engineering</i> and <i>Dealing with Data
                         2</i>.
                 </p>
@@ -102,9 +102,8 @@
                     <div class="timeline-content-date link" onclick="window.open('https://www.acm.org/');">Association for Computing Machinery
                     </div>
                 </p>
-                <p>
-                    Elected Co-Chairperson for the NCF Association for Computing Machinery alongside
-                    <div class="link" onclick="window.open('https://courtney-e-miller.github.io/');">Courtney Miller</div>.
+                <p class="text-justify">
+                    Elected Co-Chairperson for the NCF Association for Computing Machinery alongside Courtney Miller.
                 </p>
             </div>
         </div>
@@ -121,7 +120,7 @@
                     </div>
                 </p>
                 <i>Orlando, Florida</i>
-                <p>
+                <p class="text-justify">
                     Attended the Grace Hopper Celebration as an AnitaB scholar.
                 </p>
             </div>
@@ -136,7 +135,7 @@
                 <p class="timeline-content-date">Teaching Assistant
                     <div class="timeline-content-date link" onclick="window.open('https://www.ncf.edu/');">New College of Florida</div>
                 </p>
-                <p>I was a teaching assistant for the course <i>Introduction to Programming in Python</i> Fall 2018 and Fall 2020.</p>
+                <p class="text-justify">I was a teaching assistant for the course <i>Introduction to Programming in Python</i> Fall 2018 and Fall 2020.</p>
             </div>
         </div>
 
@@ -150,7 +149,7 @@
                     <div class="timeline-content-date link" onclick="window.open('https://www.revcontent.com/');">Revcontent</div>
                 </p>
                 <i>Sarasota, Florida</i>
-                <p>I created meaningful data visualizations in Python and compiled my findings into a Django web application using Pandas and Bokeh libraries. I worked along side a Scrum development team to provide user engagement analytics for the software
+                <p class="text-justify">I created meaningful data visualizations in Python and compiled my findings into a Django web application using Pandas and Bokeh libraries. I worked along side a Scrum development team to provide user engagement analytics for the software
                     they were rolling out, Engage.IM.</p>
             </div>
         </div>
@@ -164,8 +163,7 @@
                 <p class="timeline-content-date">Treasurer/Secretary</p>
                 <div class="timeline-content-date link" onclick="window.open('https://www.acm.org/');">Association for Computing Machinery
                 </div>
-                <p>Co-found the NCF Association for Computing Machinery Chapter with peers
-                    <div class="link" onclick="window.open('https://courtney-e-miller.github.io/');">Courtney Miller</div> and Jennifer Greenberg, functioned as the secretary/treasurer.
+                <p class="text-justify">Co-found the NCF Association for Computing Machinery Chapter with peers Courtney Miller and Jennifer Greenberg, functioned as the secretary/treasurer.
                 </p>
             </div>
         </div>
