--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
     </div>
 
-    <div class="text-center" style="margin-top:20px;">
+    <!-- <div class="text-center" style="margin-top:20px;">
         <a href="hcc.html" class="mimic-button">Human Centered Computing Project</a>
-    </div>
+    </div> -->
 
     <!-- <hr class="center" style="border-color:#fff;width:30em;"> -->
     <div class="space3"></div>
