--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 <body>
     <div class="space2"></div>
     <div class="flex-container">
-        <img src="assets/headshot.png" alt="Haylee Millar Photo" class="center" style="height:20em;margin:1em;border-radius:0.25em;flex-direction:column;flex-wrap:wrap;">
+        <img src="assets/headshot.jpg" alt="Haylee Millar Photo" class="center" style="height:20em;margin:1em;border-radius:0.25em;flex-direction:column;flex-wrap:wrap;">
         <div class="flex-container white-card">
             <h1 class="center">Haylee Millar</h1>
             <p class="text-justify">
-                Hi & welcome-- I am a 4th year honors computer science student at New College of Florida tentatively graduating May 2021. I am fascinated by many things including connecting different systems that work independently of one another to create useful solutions.<br>In
-                my free time I enjoy sitting in my hammock, reading, and listening to music.
+                Hi & welcome-- I am a product engineer at Platform.sh<br>
+                I am fascinated by connecting different systems that work independently of one another to create useful solutions.<br>
+                In my free time I enjoy reading in my hammock and exploring new music.<br>
+                My current fascination is working on learning Spanish!
             </p>
         </div>
     </div>
@@ -40,20 +42,56 @@
     <div class="space3"></div>
     <h2 class="center" style="color:#fff;">Experience</h2>
     <div class="timeline" style="width:75%;">
+
+        <div class="timeline-item">
+            <div class="timeline-icon">
+                <img src="assets/psh-black.png" alt="industry"></img>
+            </div>
+            <div class="timeline-content">
+                <p class="timeline-content-month">July 2021 - Present</p>
+                <p class="timeline-content-date">Product Engineer
+                    <div class="timeline-content-date link" onclick="window.open('https://platform.sh/');">Platform.sh
+                    </div></p>
+                </p>
+                <i>Remote</i>
+                <p class="text-justify">
+                    I currently work daily on the code ensuring users are able to manage their own accounts and projects.
+                </p>
+            </div>
+        </div>
+        
+        <div class="timeline-item">
+            <div class="timeline-icon">
+                <img src="assets/imgs/graduation-cap.svg" alt="acm"></img>
+            </div>
+            <div class="timeline-content right">
+                <p class="timeline-content-month">May 2021</p>
+                <p class="timeline-content-date">Bachelor of Arts in Computer Science
+                    <div class="timeline-content-date link" onclick="window.open('https://www.ncf.edu/');">
+                        New College of Florida
+                    </div>
+                </p>
+                <i>Sarasota, Florida</i>
+                <p class="text-justify">
+                    Defended my undergraduate thesis successully as an honors student.
+                </p>
+            </div>
+        </div>
+        
         <div class="timeline-item">
             <div class="timeline-icon">
                 <img src="assets/imgs/science.svg" alt="industry"></img>
             </div>
             <div class="timeline-content">
-                <p class="timeline-content-month">June 2020 - Present</p>
+                <p class="timeline-content-month">June 2020 - July 2021</p>
                 <p class="timeline-content-date">Solutions Architect
                     <div class="timeline-content-date link" onclick="window.open('https://www.atlasnetworks.com/');">Atlas Networks
-                    </div>.</p>
+                    </div></p>
                 </p>
-                <i>Sarasota, Florida.</i>
+                <i>Sarasota, Florida</i>
                 <p class="text-justify">
-                    I am currently working to create new solutions and maintain current projects for Atlas Networks clients using
-                    <div class="link" onclick="window.open('https://aws.amazon.com/');">Amazon Web Services</div> tools.
+                    I worked to create new solutions and maintain current projects for Atlas Networks clients using
+                    Amazon Web Services tools.
                 </p>
             </div>
         </div>
@@ -202,18 +240,6 @@
             <a href="https://www.linkedin.com/in/hayleemillar/" target="_blank">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
                 <span class="social-icon-text">Linkedin</span>
-            </a>
-        </li>
-        <li class="social-icon">
-            <a href="https://www.facebook.com/profile.php?id=100013082710453" target="_blank">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <span class="social-icon-text">Facebook</span>
-            </a>
-        </li>
-        <li class="social-icon">
-            <a href="https://www.instagram.com/haylee_millar/" target="_blank">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-                <span class="social-icon-text">Instagram</span>
             </a>
         </li>
     </ul>
